# ZeroXBridge_Sequencer

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Getting-Started.md  Makefile  README.md  config-tests.toml  config.toml  poseidon_test.rs
.devcontainer/: devcontainer.json
cairo1-rust-vm/: mod.rs
crates/cairo1-rust-vm/: Scarb.toml
crates/cairo1-rust-vm/src/: lib.cairo
crates/proof-generator/: README.md  Scarb.toml  register_fact.sh
crates/proof-generator/src/: l1.cairo  l2.cairo  lib.cairo
crates/proof-generator/src/l1/: verify_proof.cairo
crates/proof-generator/src/l2/: verify_proof.cairo
crates/proof-pipeline/: Cargo.toml
crates/proof-pipeline/src/: main.rs  pipeline.rs
crates/tree-builder/: Cargo.toml
crates/tree-builder/examples/: l2_merkle_example.rs
crates/tree-builder/src/: error.rs  l1_tree.rs  l2_tree.rs  lib.rs  types.rs  utils.rs
migrations/: 20250325082529_create_withdrawals_table.sql  20250326103000_create_block_trackers_table.sql  20250428032930_create_deposits_table.sql  20250428032930_create_withdrawals_table.sql  20250428133958_create_tables.sql  20250627085000_create_deposit_hashes_table.sql  20250724182944_unique_commitment_hash.sql
src/: config.rs  lib.rs  main.rs
src/api/: database.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/db/: client.rs  database.rs  mod.rs
src/db/migrations/: 0001_create_deposits_table.sql
src/events/: l1_event_watcher.rs  l2_event_watcher.rs  mod.rs
src/http/: Cargo.toml  client.rs  test_herodotus_api.rs
src/migration/: create_withdrawals_table.sql
src/oracle_service/: oracle_service.rs
src/proof_client/: input_generator.rs  mod.rs  proof_generator.rs
src/queue/: l1_queue.rs  l2_queue.rs  mod.rs
src/relayer/: client.rs  ethereum_relayer.rs  mod.rs  proof_submission.rs  starknet_relater.rs  starknet_relayer.rs
src/test/: withdrawal_api.rs
src/utils/: hash.rs  mod.rs
test/: withdrawal_api.rs
test_output/: input.cairo1.json  input.cairo1.txt
tests/: compute_hash.rs  compute_hash_api.rs  deposit_api.rs  herodotus_api.rs  integration_proof_submission.rs  l1_events_logs.rs  l2_event_watcher.rs  mod.rs  poseidon_test.rs  proof_submission_integration_test.rs  proof_submission_test.rs  scarb_build.rs  starknet_relayer_test.rs  starknet_relayer_tests.rs  utils.rs  withdrawal_api.rs
