[package]
name = "zero_x_bridge_sequencer"
version = "0.1.0"
edition = "2021"
authors = ["ZeroXBridge Team <info@zeroxbridge.com>"]
description = "Sequencer for managing cross-chain deposits and withdrawals between Ethereum and Starknet"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full", "macros", "rt-multi-thread"] }

# Database
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"

# Error handling
thiserror = "1.0"
anyhow = "1.0.95"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# Web framework
axum = "0.8.3"
tower = { version = "0.4.13", features = ["full", "util"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
hyper = "0.14.27"

# Starknet interaction
starknet = "0.13.0"  # Consider bumping to 0.13 if compatible; avoid 0.7 unless needed for `no-std`.

# Ethereum interaction
ethers = { version = "2.0.14", features = ["rustls", "ws"] }

# HTTP client
reqwest = { version = "0.12.15", features = ["json", "multipart"] }

# Environment and utility
dotenv = "0.15"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Testing & mocking
mockall = "0.13.1"

[package.metadata.sqlx]
offline = true

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio-test = "0.4"
mockito = "0.31"
