[package]
name = "proof-generatorr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
thiserror = "2.0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

# Local dependency
proof-generatorr = { path = ".", version = "0.1.0" }
